test/functions/shadowing/primary-parenless-redeclares-field.good
primary-parenless-redeclares-field.chpl:3: error: parenless proc redeclares the field 'field'
